--- a/static/css/style.css
+++ b/static/css/style.css
@@ -594,7 +594,6 @@ th, td {
   .tab label {
     background: inherit; 
     padding: 10px; 
-    border: 1px solid #ccc; 
     margin-left: -1px; 
     position: relative;
     left: 1px; 
@@ -615,7 +614,7 @@ th, td {
   }
 
   [type=radio]:checked ~ label {
-    background: linear-gradient(to right, #00b7ff, #ffffc7);
+    background: inherit;
     border-bottom: 1px solid white;
     z-index: 2;
   }
