--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,16 +43,16 @@
                 <div class="tabs">
                 <div class="tab">
                     <input type="radio" id="tab-1" name="tab-group-1" checked>
-                    <label for="tab-1">Questions</label>
+                    <label for="tab-1" class="tab">Questions</label>
                     <div class="content">
                         {% for question in questions %}
-                            <p><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}</a></p>
+                            <p><a href="{{ url_for('view_question', question_id=question.id) }}">&#8226;&nbsp;&nbsp;{{ question.header }}</a></p>
                         {% endfor %}
                     </div>
                 </div>
                 <div class="tab">
                     <input type="radio" id="tab-2" name="tab-group-1">  
-                    <label for="tab-2">Responses</label>
+                    <label for="tab-2" class="tab">Responses</label>
                     <div class="content">
                         <ul>
                             {% for comment in comments %}
