--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -40,19 +40,11 @@ input, textarea{
   color: #4d5060;
   font-family: 'Poppins', sans-serif;
   font-size: .9em;
-
+  background-color: #272638;
 }
 
 input[type="text"]::placeholder {
   color: #d4d9e3;
-}
-
-input[type="text"]:hover,
-input[type="password"]:hover,
-textarea:hover,
-select:hover {
-  border-color: green;
-  background: lightyellow;
 }
 
 input[type="text"]:focus,
@@ -74,10 +66,25 @@ input[type="submit"] {
   transition: all .3s ease-out;
 }
 
+input[type="comment"] {
+  background-color: #272638;
+}
+
 input[type="submit"]:hover {
   cursor: pointer;
   background: white;
   color: green;
+}
+
+#submit {
+  width: 25%;
+}
+
+#comment {
+  font-family: fontLight;
+  background-color: #272638;
+  color: white;
+  width: 150%;
 }
 
 .success-wrapper {
