--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,7 +31,8 @@
         </div>
         <div class="leftSide">
             <h1>Account Overview</h1>
-            <img src="../static/Images/profilePic.jpg" class="profilePic" alt="Profile Picture">
+            <h1>{% if user %}{{user}}{% endif %}</h1>
+            <img src="../static/Images/AardvarkLogo.png" class="profilePic" alt="Profile Picture">
             <form>
                 <button class="uploadPic">Upload Photo</button>
             </form>
@@ -40,13 +41,14 @@
             </form>
         </div>
         <div class="rightSide">
-                <div class="tabs">
+            <div class="tabs">
                 <div class="tab">
                     <input type="radio" id="tab-1" name="tab-group-1" checked>
                     <label for="tab-1" class="tab">Questions</label>
                     <div class="content">
                         {% for question in questions %}
                             <p><a href="{{ url_for('view_question', question_id=question.id) }}">&#8226;&nbsp;&nbsp;{{ question.header }}</a></p>
+                            <div class="divider"></div>
                         {% endfor %}
                     </div>
                 </div>
@@ -54,15 +56,27 @@
                     <input type="radio" id="tab-2" name="tab-group-1">  
                     <label for="tab-2" class="tab">Responses</label>
                     <div class="content">
-                        <ul>
                             {% for comment in comments %}
-                                <li>{{ comment.content }}</li>
+                                <p>{{ comment.content }}</p>
+                                <div class="divider"></div>
                             {% endfor %}
-                        </ul>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input type="radio" id="tab-3" name="tab-group-1">
+                    <label for="tab-3" class="tab">Likes</label>
+                    <div class="content">
+                        <p>Test</p>
+                    </div>
+                </div>
+                <div class="tab">
+                    <input type="radio" id="tab-4" name="tab-group-1">
+                    <label for="tab-4" class="tab">Dislikes</label>
+                    <div class="content">
+                        <p>Test</p>
                     </div>
                 </div>
             </div>
         </div>
-      </form>
     </body>
 </html>
