--- a/templates/view_question.html
+++ b/templates/view_question.html
@@ -51,6 +51,7 @@
                 <h2>Answers</h2>
                 <ul>
                 {% for comment in question.comments %}
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <li>{{ comment.content }}</li>
                 {% endfor %}
                 </ul>
