--- a/static/css/style.css
+++ b/static/css/style.css
@@ -604,7 +604,15 @@ th, td {
     padding: 10px; 
     margin-left: -1px; 
     position: relative;
-    left: 1px; 
+    left: 1px;
+  }
+
+  .tab label:hover {
+    background: #403e5b;
+    padding: 10px; 
+    margin-left: -1px; 
+    position: relative;
+    left: 1px;
   }
 
   .tab [type=radio] {
@@ -619,6 +627,13 @@ th, td {
     right: 0;
     bottom: 0;
     padding: 20px;
+    
+  }
+
+  .content > * {
+    opacity: 0;
+    transform: translateX(-100%);
+    /*transition: all 0.6s ease;*/
   }
 
   [type=radio]:checked ~ label {
@@ -630,6 +645,11 @@ th, td {
   
   [type=radio]:checked ~ label ~ .content {
     z-index: 1;
+  }
+
+  [type="radio"]:checked ~ label ~ .content > * {
+    opacity: 1;
+    transform: translateX(0);
   }
 
   .tab {
