--- a/static/css/style.css
+++ b/static/css/style.css
@@ -208,8 +208,9 @@ body {
 }
 
 .rightSide {
-    margin-top: -84vh;
+    margin-top: -80vh;
     margin-left: 55%;
+    position:relative;
     color: white;
     font-family: fontLight;
 }
@@ -244,6 +245,7 @@ body {
     margin-right: auto;
     margin-top: 1%;
     margin-bottom: 5%;
+    cursor: pointer;
     background: linear-gradient(to right, #00b7ff, #ffffc7);
     border-radius: 40px;
     color: #272638;
@@ -466,9 +468,10 @@ th, td {
 .profileButton {
     display: block;
     background: linear-gradient(to right, #00b7ff, #ffffc7);
+    position: relative;
     margin-right: auto;
     margin-left: 2%;
-    margin-top: -3%;
+    margin-top: 0%;
     border-radius: 40px;
     color: #272638;
     height: 3%;
@@ -478,6 +481,7 @@ th, td {
     font-size: 20px;
     height: 60px;
     width: 200px;
+    cursor: pointer;
 }
 
 
@@ -600,7 +604,7 @@ th, td {
   }
 
   .tab label {
-    background: inherit; 
+    background: #272638; 
     padding: 10px; 
     margin-left: -1px; 
     position: relative;
@@ -621,7 +625,7 @@ th, td {
 
   .content {
     position: absolute;
-    top: 28px;
+    top: 50px;
     left: 0;
     background: inherit;
     right: 0;
@@ -655,4 +659,28 @@ th, td {
   .tab {
       font-family: fontLight;
       font-size: 25px;
+  }
+  
+  #imgUpload {
+    position: relative;
+  }
+
+  #PictureLabel {
+    display: block;
+    position: relative;
+    background: linear-gradient(to right, #00b7ff, #ffffc7);
+    position: relative;
+    margin-right: auto;
+    margin-left: 2%;
+    margin-top: -3%;
+    border-radius: 40px;
+    color: #272638;
+    height: 3%;
+    width: 12.5%;
+    outline: white;
+    font-family: fontBold;
+    font-size: 20px;
+    height: 60px;
+    width: 200px;
+    cursor: pointer;
   }
