--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         </div>
         <div class="loginPage">
             <form method="POST" action="/login">
-                <div class="form-field">{{ form.email.label }} {{ form.email }}
+                <div class="form-field2">{{ form.email.label }} {{ form.email }}
                     {% if form.email.errors %}
                     <ul class="errors">
                         {% for error in form.email.errors %}
@@ -25,7 +25,7 @@
                     </ul>
                     {% endif %}
                 </div>
-                <div class="form-field">{{ form.password.label }} {{ form.password }}
+                <div class="form-field2">{{ form.password.label }} {{ form.password }}
                     {% if form.password.errors %}
                     <ul class="errors">
                         {% for error in form.password.errors %}
