fixed error, logo not displaying when editing a question

--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -9,7 +9,7 @@
     <body>
         <div class="header">
             <a href="{{ url_for('questions') }}">
-                <img src="../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
+                <img src="../../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
             </a>
             <div class="navLinks">
                 <a href="{{ url_for('questions') }}">
