--- a/templates/profile.html
+++ b/templates/profile.html
@@ -64,7 +64,7 @@
                     <div class="content">
                             {% for comment in comments %}
                                 <p><a href="{{ url_for('view_question', question_id=comment.question_id) }}">&#8226;&nbsp;&nbsp;{{ comment.content }}</a></p>
-                                <p>Date Posted: {{ comment.date_posted }}</p>
+                                <p class="bodyDisplay">Date Posted: {{ comment.date }}</p>
                                 <div class="divider"></div>
                             {% endfor %}
                     </div>
