--- a/templates/questions.html
+++ b/templates/questions.html
@@ -36,7 +36,10 @@
             <form>
                 <input class="search">
             </form>
-            <button class="searchButton">Search</button>
+            <form action="{{ url_for('search') }}" method="GET">
+                <button class="searchButton">Search</button>
+            </form>
+
 
             <div class="leftText">
 <!-- We will need to add a conditional here to display "There are no posts" when empty. -->
