--- a/static/css/style.css
+++ b/static/css/style.css
@@ -507,6 +507,7 @@ th, td {
     margin-right: auto;
     margin-left: auto;
     margin-top: 2%;
+    margin-bottom: -1.5%;
     border-radius: 40px;
     color: #272638;
     height: 3%;
@@ -726,7 +727,7 @@ input[type="submit"] {
     border-radius: 40px;
     color: #272638;
     height: 30px;
-    width: 100px;
+    width: 155px;
     outline: white;
     font-family: fontBold;
     font-size: 20px;
