--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,13 +32,11 @@
         <div class="leftSide">
             <h1>Account Overview</h1>
             <h1>{% if user %}{{ user }}{% endif %}</h1>
-                {% if image %}
-                <img src="{{ picture.filename }}" class="profilePic" alt="Profile Picture">
-                {% else %}
-                <img src="../static/Images/AardvarkLogo.png" class="profilePic" alt="Profile Picture">
-                {% endif %}
-            <form action="{{ url_for('uploadProfileImage') }}" method="POST">
-                <input type="file" name="file" id="imgUpload" accept="image/png, image/jpeg, image/jpg" enctype="multipart/form-data" class="custom-file-input"></span>
+                {% for user in user_id %}
+                    <img src="{{ url_for('static', filename='Images/' + user.filename) }}" class="profilePic" alt="Profile Picture">
+                {% endfor %}
+            <form action="{{ url_for('uploadProfileImage') }}" method="POST" enctype="multipart/form-data" >
+                <input type="file" name="file" id="imgUpload" accept="image/png, image/jpeg, image/jpg, image/gif" class="custom-file-input"></span>
                 <input type="submit" id="imgUpload">
             </form>
             <form action="{{ url_for('register', user_id=user_id) }}" method="GET">
