--- a/static/css/style.css
+++ b/static/css/style.css
@@ -217,7 +217,8 @@ body {
 
 .profilePic {
     position: relative;
-    width: 90%;
+    width: 510px;
+    height: 510px;
     border-radius: 50%;
     margin-left: -2vw;
 }
