--- a/static/css/style.css
+++ b/static/css/style.css
@@ -479,7 +479,7 @@ th, td {
     background: linear-gradient(to right, #00b7ff, #ffffc7);
     position: relative;
     margin-right: auto;
-    margin-left: auto;
+    margin-left: 15%;
     margin-top: 0%;
     border-radius: 40px;
     color: #272638;
